--- a/style.css
+++ b/style.css
@@ -18,10 +18,9 @@ p {
 
 body {
   overflow-x: hidden;
-  background: #f7f7f9;
 }
 
-.content {
+.main_container {
   background: #f7f7f9;
   position: relative;
 }
@@ -30,103 +29,111 @@ body {
   background: #fff;
 }
 
-.color-n-900 {
+.bg-n-300 {
+  background: #f7f7f9;
+}
+
+.bg-p-50 {
+  background: #ebebff;
+}
+
+.clr-n-900 {
   color: #000;
 }
 
-.color-n-800 {
+.clr-n-800 {
   color: #172b4d;
 }
 
-.color-n-700 {
+.clr-n-700 {
   color: #253858;
 }
 
-.color-n-600 {
+.clr-n-600 {
   color: #344563;
 }
 
-.color-n-500 {
+.clr-n-500 {
   color: #7a869a;
 }
 
-.color-p-500 {
+.clr-p-500 {
   color: #396df2;
 }
 
-.color-p-400 {
+.clr-p-400 {
   color: #6070ff;
 }
 
-.color-p-300 {
+.clr-p-300 {
   color: #7f8cff;
 }
 
-.fontSizeValue-40 {
+.size-40 {
   font-size: 40px;
 }
 
-.fontSizeValue-32 {
+.size-32 {
   font-size: 32px;
 }
 
-.fontSizeValue-20 {
+.size-20 {
   font-size: 20px;
 }
 
-.fontSizeValue-18 {
+.size-18 {
   font-size: 18px;
 }
 
-.fontSizeValue-17 {
+.size-17 {
   font-size: 17px;
 }
 
-.fontSizeValue-16 {
+.size-16 {
   font-size: 16px;
 }
 
-.fontSizeValue-15 {
+.size-15 {
   font-size: 15px;
 }
 
-.fontSizeValue-13 {
+.size-13 {
   font-size: 13px;
 }
 
-.fontSizeValue-12 {
+.size-12 {
   font-size: 12px;
 }
 
-.fontWeightValue-700 {
+.weight-700 {
   font-weight: 700;
 }
 
-.fontWeightValue-500 {
+.weight-500 {
   font-weight: 500;
 }
 
-.fontWeightValue-400 {
+.weight-400 {
   font-weight: 400;
 }
 
-.lineHeightValue-52 {
+.line_hieght-52 {
   line-height: 52px;
 }
 
-.lineHeightValue-28 {
+.line_hieght-28 {
   line-height: 28px;
 }
 
-.lineHeightValue-24 {
+.line_hieght-24 {
   line-height: 24px;
 }
 
-.lineHeightValue-20 {
+.line_hieght-20 {
   line-height: 20px;
 }
 
-.lineHeightValue-16 {
+.line_hieght-16 {
   line-height: 16px;
 }
 
@@ -159,32 +166,25 @@ body {
   color: #fff;
 }
 
-@keyframes btn-hover {
-  100% {
-    box-shadow: inset 11rem 0 0 0 #6070ff, 0 8px 16px rgba(64, 83, 252, 0.24);
-    color: #fff;
-  }
-}
-
 .hidden {
   transform: scale(0);
 }
 
-.nbar {
+.navigation_bar {
   padding: 1rem 1.5rem;
   align-items: center;
   justify-content: space-between;
   position: relative;
 }
 
-.nbar__link {
+.navigation_bar__link {
   color: #2230d2;
   animation-name: rotate-logo;
   animation-duration: 1.5s;
   animation-iteration-count: 1;
 }
 
-.nbarHamb {
+.navigation_bar__hamb {
   cursor: pointer;
   z-index: 100;
 }
@@ -193,7 +193,7 @@ body {
   content: "";
   position: absolute;
   background-color: #fff;
-  background-image: url("./shapes.png");
+  background-image: url("images/shapes.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -214,7 +214,7 @@ body {
   z-index: 10;
 }
 
-.htitle {
+.head__title {
   color: #172b4d;
   width: 10ch;
 }
@@ -233,52 +233,284 @@ body {
   text-transform: uppercase;
 }
 
-.icons {
+.icons_list {
   margin: 0.5rem 0;
   align-items: center;
   justify-content: space-between;
   width: 11rem;
 }
 
-.navbarMenuLink {
+.cards {
+  grid-template-rows: repeat(3, auto);
+  row-gap: 5.5rem;
+  justify-content: center;
+  padding: 7.125rem 1.5rem;
+}
+
+.card {
+  padding: 1rem 1rem 1.5rem 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  border-radius: 1rem;
+  border: 1px solid #dfe1e6;
+}
+
+.card__img {
+  width: 100%;
+}
+
+.card__subtitle {
+  align-items: center;
+  column-gap: 2rem;
+  margin: 20px 0;
+}
+
+.card__subtitle-ul {
+  margin: 0;
+  padding: 0;
+}
+
+.card__subtitle-li {
+  margin-right: 2rem;
+}
+
+.card__topics {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin: 1rem 0 1.8rem;
+}
+
+.card__topics__text {
+  padding: 4px 12px;
+  border-radius: 8px;
+}
+
+.card__btn .btn {
+  width: 124px;
+  height: 48px;
+  padding: 12px;
+  border: 1px solid #6070ff;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.about {
+  padding: 7.125rem 1.5rem;
+  border-top-right-radius: 5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.about__title {
+  width: 5ch;
+}
+
+.about__dsc {
+  margin: 10px 0;
+}
+
+.about__connect {
+  text-transform: uppercase;
+}
+
+.about__icons__ul {
+  margin: 1.3rem 0 1rem;
+  align-items: center;
+  justify-content: space-between;
+  width: 11rem;
+}
+
+.about .btn {
+  width: 162px;
+  height: 48px;
+  padding: 12px;
+  border: 1px solid #6070ff;
+  border-radius: 8px;
+  cursor: pointer;
+}
+
+.tools {
+  margin: 6px 0;
+  padding: 24px 0;
+}
+
+.langs__top {
+  align-items: center;
+  justify-content: space-between;
+  padding: 23px 40px 23px 0;
+  cursor: pointer;
+}
+
+.langs__top__img {
+  transform: rotate(90deg);
+}
+
+.langs__bottom li {
+  align-items: center;
+  gap: 1rem;
+  border-radius: 8px;
+  margin: 12px 0;
+  padding: 9px 12px;
+}
+
+.about__frameworks {
+  border-bottom: 1px solid #dfe1e6;
+}
+
+.about__frameworks__top {
+  align-items: center;
+  justify-content: space-between;
+  padding: 23px 40px 23px 0;
+  cursor: pointer;
+}
+
+.about__skills {
+  border-bottom: 1px solid #dfe1e6;
+}
+
+.about__skills__top {
+  align-items: center;
+  justify-content: space-between;
+  padding: 23px 40px 23px 0;
+  cursor: pointer;
+}
+
+.error {
+  text-align: center;
+  color: red;
+}
+
+.modal {
+  background: #fff;
+  padding: 1.5rem;
+  width: 90%;
+  opacity: 0;
+  visibility: hidden;
+  transition: transform 1s, opacity 1s, visibility 0s;
+  z-index: 300;
+}
+
+.modal__header {
+  justify-content: space-between;
+}
+
+.modal__header img {
+  width: 20px;
+  height: 20px;
+  cursor: pointer;
+}
+
+.modal__image {
+  width: 100%;
+  margin: 1rem 0;
+}
+
+.modal__dsc {
+  flex-direction: column;
+}
+
+.modal__dsc__first {
+  margin: 0.7rem 0;
+}
+
+.modal__dsc__second {
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.modal__dsc__second div {
+  margin: 1rem 0;
+}
+
+.modal__dsc__second p {
+  padding: 4px 12px;
+  border-radius: 8px;
+  margin-right: 0.5rem;
+}
+
+.modal__btn {
+  margin: 1rem 0;
+}
+
+.modal__btn li a {
+  border: 1px solid #6070ff;
+  padding: 0.6rem 1.5vw;
+  border-radius: 8px;
+  margin-right: 0.5rem;
+}
+
+.modal__feature ul {
+  padding: 0;
+  margin: 0;
+}
+
+.modal__feature ul li {
+  margin-left: 1.5rem;
+}
+
+.modal.active {
+  visibility: visible;
+  transform: scale(1);
+  opacity: 1;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  overflow: auto;
+  visibility: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  opacity: 0;
+  transition: opacity 1s, transform 1s, visibility 0s;
+  transform: scale(0);
+  background: rgba(193, 199, 208, 0.5);
+  z-index: 200;
+}
+
+.overlay.active {
+  visibility: visible;
+  transform: scale(1);
+  opacity: 1;
+  pointer-events: all;
+}
+
+.navigation_bar__menu__link {
   transition: color 0.5s ease-in-out, font-size 0.5s ease-in-out;
 }
 
 @media (min-width: 992px) {
-  .navbarMenuLink:hover {
+  .navigation_bar__menu__link:hover {
     color: #396df2;
     font-size: 17px;
   }
 }
 
-.links img {
+.icons_list__link img {
   transition: transform 0.5s;
 }
 
-.listsValuenk img {
+.about__icons__link img {
   transition: transform 0.5s;
 }
 
-.links img:hover {
+.icons_list__link img:hover {
   transform: scale(1.5);
 }
 
-.listsValuenk img:hover {
+.about__icons__link img:hover {
   transform: scale(1.5);
-}
-
-@keyframes rotate-logo {
-  50% {
-    transform: scale(1.5) rotate(360deg) translateX(-50%);
-  }
-
-  to {
-    transform: scale(1) rotate(720deg) translateX(0);
-  }
 }
 
 @media (max-width: 992px) {
-  .navbarMenu {
+  .navigation_bar__menu {
     visibility: hidden;
     opacity: 0;
     width: 100%;
@@ -293,15 +525,15 @@ body {
     z-index: 50;
   }
 
-  .navbarMenuUl {
+  .navigation_bar__menu__ul {
     flex-direction: column;
   }
 
-  .navbarMenuLi {
+  .navigation_bar__menu__li {
     margin-bottom: 40px;
   }
 
-  .navbarMenuLi a {
+  .navigation_bar__menu__li a {
     font-size: 32px;
     font-weight: 600;
     line-height: 44px;
@@ -309,7 +541,7 @@ body {
     transition: color 1s;
   }
 
-  .navbarMenuLi a:hover {
+  .navigation_bar__menu__li a:hover {
     color: #000;
   }
 }
@@ -322,25 +554,20 @@ body {
 }
 
 @media (min-width: 992px) {
-  .nbar {
+  .navigation_bar {
     padding: 1.5rem 8rem;
   }
 
-  .navbarMenu {
+  .navigation_bar__menu {
     display: flex;
     align-items: center;
   }
 
-  .navbarMenuLi {
+  .navigation_bar__menu__li {
     margin: 0 16px;
   }
 
-  .nbarHamb {
-    display: none;
-  }
-
   .head::before {
-    background-image: url(./images/headline-background.svg);
     padding: 6rem;
     border-bottom-left-radius: 8rem;
   }
@@ -357,39 +584,59 @@ body {
   .head__link {
     margin: 0.7rem 0;
   }
-}
 
-@media (min-width: 1440px) {
-  .fontSizeValue-40 {
-    font-size: 48px;
+  .cards {
+    padding: 5rem;
   }
 
-  .fontSizeValue-16 {
-    font-size: 20px;
+  .card {
+    align-items: center;
+    max-width: 1104px;
+    column-gap: 46px;
+    padding: 1.5rem;
   }
 
-  .fontSizeValue-15 {
-    font-size: 16px;
+  .card__text {
+    padding: 1rem;
   }
 
-  .fontSizeValue-13 {
-    font-size: 18px;
+  .card__img {
+    width: 50%;
   }
 
-  .lineHeightValue-52 {
-    line-height: 60px;
+  .card:nth-child(1),
+  .card:nth-child(3) {
+    flex-direction: row;
   }
 
-  .lineHeightValue-24 {
-    line-height: 28px;
+  .card:nth-child(2),
+  .card:nth-child(4) {
+    flex-direction: row-reverse;
   }
 
-  .nbar {
-    padding: 1.5rem 9.68rem;
+  .about {
+    padding: 6rem;
+    flex-direction: row;
+    column-gap: 37px;
+    border-top-right-radius: 8rem;
   }
 
-  .head {
-    padding: 17rem 16.25rem;
-    padding-right: 18vw;
+  .about_me {
+    flex-basis: 25rem;
+  }
+
+  .langs__bottom {
+    display: flex;
+    column-gap: 12px;
+  }
+
+  .langs__bottom li {
+    flex-direction: column;
+    align-items: flex-start;
+    flex-basis: 7.6rem;
+  }
+
+  .tools {
+    flex-basis: 25rem;
   }
 }
